--- a/x86_64.config
+++ b/x86_64.config
@@ -2,6 +2,8 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_Generic=y
 CONFIG_PACKAGE_grub2-efi=y
+CONFIG_TARGET_ROOTFS_EXT4FS=y
+CONFIG_TARGET_EXT4_JOURNAL=y
 CONFIG_EFI_IMAGES=y
 CONFIG_ALL_KMODS=y
 CONFIG_TARGET_IMAGES_GZIP=y
